--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,10 +72,15 @@ body {
 
 .presentation {
 	margin-top: 10px;
+	padding: 20px;
+}
+
+.presentation-text{
+	max-height: 8em;
 	text-align: justify;
 	text-justify: newspaper;
 	font: 15px/26px;
-	padding: 20px;
+	postion:relative;
 }
 
 @media screen and (min-width:970px) {
@@ -212,6 +217,11 @@ body {
 	align-items: center;
 }
 
+.review-photo{
+	width:50%;
+}
+
+
 @media screen and (min-width: 970px) {
 	.review-picture {
 		padding: 20px;
@@ -333,11 +343,11 @@ body {
 }
 
 .inline {
-	display: inline;
+	display: inline !important;
 }
 
 .inline-block {
-	display: inline-block;
+	display: inline-block !important;
 }
 
 .company{
@@ -354,4 +364,16 @@ body {
 #infscr-loading{
 	text-align:center;
 	margin:20px;
+}
+
+.comment{
+	max-height:4em;
+}
+
+.img-brand{
+	width:50px;
+}
+
+.navbar-brand{
+	
 }
